# robot_web_control_project

./: CMakeLists.txt  Dockerfile-envoy  LICENSE  README.md  docker-compose.yml  envoy.yaml  package.xml
frontend/: Dockerfile  envoy.yaml  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/proto/: robot.proto  robot_grpc_web_pb.js  robot_pb.js
grpc_server/: CMakeLists.txt  Dockerfile  package.xml
grpc_server/include/: grpc_server.hpp  robot.grpc.pb.h  robot.pb.h
grpc_server/proto/: robot.proto  robot_pb2.py  robot_pb2_grpc.py
grpc_server/proto/subdir/: robot_msgs.proto
grpc_server/src/: grpc_client.py  grpc_server.cpp  grpc_server.py
ros/: Dockerfile
roscore/: Dockerfile
simulation/: CMakeLists.txt  Dockerfile  package.xml
simulation/src/: robot_arm_sim.py
simulation/urdf/: robot_arm.urdf
src/simulation/src/: robot_arm_sim.py
