<?xml version="1.0"?>
<package format="2">
  <name>grpc_server</name>
  <version>0.0.1</version>
  <description>The gRPC server package</description>
  <maintainer email="vicentetqueiroz@gmail.com">Vicente Queiroz</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>grpc</build_depend>
  <run_depend>grpc</run_depend>
  <exec_depend>std_msgs</exec_depend>
</package>