<?xml version="1.0"?>
<package format="2">
  <name>robot_web_control_project</name>
  <version>0.0.1</version>
  <description>The robot_web_control_project package</description>
  <maintainer email="vicentetqueiroz@gmail.com">Vicente Queiroz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>